# runs

./: README.md  pyproject.toml
src/runs/: __init__.py  runs.py
src/tests/: test_collect_runs_count.py  test_count_runs.py  test_count_sublists.py  test_generate_floats.py  test_is_first_smallest.py  test_list_length.py  test_round_floats.py  test_split_into_sublists.py  test_stirling_numbers_first_kind.py  test_weighted_average.py
