[project]
name = "runs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeffrey S. Haemer", email = "jeffrey.haemer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sympy>=1.13.3",
]

[project.scripts]
runs = "runs.runs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
