[project]
name = "runs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeffrey S. Haemer", email = "jeffrey.haemer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.4",
    "sympy>=1.13.3",
]

[project.scripts]
hello = "runs:main"
runs = "runs.runs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
